add remaining examples, with comments